# ek-ra8d1-blinky

./: .cproject  .gitignore  .project  .secure_azone  .secure_xml  CMakeLists.txt  README.md  configuration.xml  ra8d1_blinky Debug_Flat.launch
cmake/toolchains/: arm-none-eabi-gcc.cmake
ek-ra8d1-blinky/script/: fsp.ld
ra_gen/: bsp_clock_cfg.h  pin_data.c
script/: fsp.ld
